新增：“新建课程”，“管理课程”，“新增用户”等功能，用户已于数据库连接，课程还未与数据库连接

--- a/app.json
+++ b/app.json
@@ -2,7 +2,9 @@
   "pages":[
     "pages/index/index",
     "pages/logs/logs",
-    "pages/mine/mine"
+    "pages/mine/mine",
+    "pages/addcourse/addcourse",
+    "pages/managecourse/managecourse"
   ],
   "window":{
     "backgroundTextStyle":"light",
