--- a/server/pom.xml
+++ b/server/pom.xml
@@ -145,7 +145,14 @@
       <artifactId>commons-collections</artifactId>
       <version>3.2</version>
     </dependency>
+    <!--JSON依赖-->
+    <dependency>
+      <groupId>org.json</groupId>
+      <artifactId>json</artifactId>
+      <version>20171018</version>
+    </dependency>
   </dependencies>
+
   <build>
     <finalName>smartQA</finalName>
   </build>
