--- a/server/src/main/webapp/WEB-INF/web.xml
+++ b/server/src/main/webapp/WEB-INF/web.xml
@@ -21,4 +21,15 @@
 		<!-- 默认匹配所有的请求 -->
 		<url-pattern>/</url-pattern>
 	</servlet-mapping>
+
+	<servlet>
+		<servlet-name>CoreServlet</servlet-name>
+		<servlet-class>com.smartQA.operation.servlet.CoreServlet</servlet-class>
+	</servlet>
+
+	<!-- url-pattern中配置的/coreServlet用于指定该Servlet的访问路径 -->
+	<servlet-mapping>
+		<servlet-name>CoreServlet</servlet-name>
+		<url-pattern>/servlet/CoreServlet</url-pattern>
+	</servlet-mapping>
 </web-app>
